# dawati-shell

./: Pager.js  Weather.js  Widget.js  configure.ac  main.js  weather.css
panels/home/plugins/: video.js  video.plugin
panels/home/plugins/example/: Makefile.am
panels/home/plugins/weather/: Makefile.am  Pager.js  Weather.js  Widget.js  org.dawati.shell.home.plugin.weather.gschema.xml  weather.js  weather.plugin
